Add dev-server + build from @open-wc

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-	<script src="/node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
-	<script src="/node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-	<title>lit-element pending-state test</title>
-</head>
-
-<body>
-	<app-shell></app-shell>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <title>lit-element pending-state test</title>
+  </head>
+  <body>
+    <app-shell></app-shell>
+    <script src="./index.js" type="module"></script>
+  </body>
 </html>
